fix: fecha as brechas do guardrail de cota apontadas na revisao
O guardrail travava em definitivo: barrado o provedor, o saldo nunca era
reavaliado e a virada de mes que renova a cota so apareceria num restart.
Uma sondagem por intervalo (odds.api.sonda-intervalo-horas, padrao 24)
reabre a janela, contada a partir da tentativa para que um provedor fora
do ar nao vire sondagem a cada requisicao.

O atalho de snapshot passa a valer so na primeira busca apos o boot, que
e o caso que ele existe para cobrir. Valendo sempre, ele reabastecia o
cache recem-limpo e tornava DELETE /api/cache um comando sem efeito.

Uma resposta 200 sem jogos nao sobrescreve mais o snapshot — apagaria o
unico fallback do guardrail, e a The Odds API responde [] fora de
temporada — e fica no cache apenas por cache-ttl-degradado-minutos
(padrao 10), para que uma falha momentanea nao desligue o filtro de
favoritos pela hora inteira do TTL normal.

Tambem: @Cacheable com sync = true, para N misses simultaneos nao virarem
N chamadas pagas; a origem das odds viaja no valor retornado
(OddsComOrigem) em vez de uma flag de instancia, que num acerto de cache
descrevia a ultima execucao e nao o que o chamador recebeu; o gauge
odds_api_requests_remaining exporta NaN antes da primeira leitura, para
nao disparar alerta de saldo baixo a cada deploy; e os limiares de WARN
saem do minimo configurado (dobro e minimo) em vez de fixos em 100/50.

Refs #40

Co-Authored-By: Claude Opus 5 <noreply@anthropic.com>
Claude-Session: https://claude.ai/code/session_01At6SxK8tUcciTvDnNe6wWS