@@ -2,12 +2,14 @@ package com.cartola.odds.client;
 
 import com.cartola.odds.config.CacheConfig;
 import com.cartola.odds.config.OddsProperties;
+import com.cartola.odds.model.OddsComOrigem;
 import com.cartola.odds.model.OddsSnapshot;
 import com.cartola.odds.model.response.OddsResponse;
 import com.cartola.odds.repository.OddsSnapshotRepository;
 import com.fasterxml.jackson.core.type.TypeReference;
 import com.fasterxml.jackson.databind.ObjectMapper;
 import io.micrometer.core.instrument.Counter;
+import io.micrometer.core.instrument.Gauge;
 import io.micrometer.core.instrument.MeterRegistry;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.beans.factory.annotation.Qualifier;
@@ -31,20 +33,21 @@ import java.util.concurrent.atomic.AtomicReference;
  *
  * <p>A The Odds API devolve o saldo restante em cada resposta, nos headers
  * {@code x-requests-remaining} e {@code x-requests-used}. Este cliente le esses headers,
- * expõe o ultimo valor conhecido para {@code GET /api/odds/cota} e as metricas Micrometer
+ * expoe o ultimo valor conhecido para {@code GET /api/odds/cota} e as metricas Micrometer
  * ({@code odds_api_requests_total}, {@code odds_api_requests_remaining},
  * {@code odds_api_errors_total}), e para de chamar o provedor quando o saldo cai abaixo de
  * {@code odds.api.min-requests-remaining} — servindo em vez disso a ultima resposta
  * conhecida, persistida em {@code odds_snapshot} para sobreviver a restart e redeploy.
+ *
+ * <p>Duas valvulas evitam que o guardrail vire uma porta trancada por dentro: uma sondagem
+ * periodica ({@code odds.api.sonda-intervalo-horas}), sem a qual o saldo nunca seria
+ * reavaliado e a virada de mes que renova a cota passaria despercebida; e o atalho de
+ * snapshot valer <em>so na primeira execucao</em> apos o boot, para que
+ * {@code DELETE /api/cache} continue sendo o gatilho manual de gasto que sempre foi.
  */
 @Slf4j
 @Component
 public class OddsClient {
-
-    private static final String LIMIAR_ALERTA_LOG  = "100";
-    private static final String LIMIAR_CRITICO_LOG = "50";
-    private static final long LIMIAR_ALERTA  = 100;
-    private static final long LIMIAR_CRITICO = 50;
 
     /** Sentinela de "nenhuma leitura de cota ainda" — nao pode ser um saldo real. */
     private static final long SEM_LEITURA = -1L;
@@ -59,10 +62,17 @@ public class OddsClient {
 
     private final AtomicLong requestsRemaining = new AtomicLong(SEM_LEITURA);
     private final AtomicLong requestsUsed      = new AtomicLong(SEM_LEITURA);
-    private final AtomicReference<LocalDateTime> ultimaLeitura = new AtomicReference<>();
+    private final AtomicReference<LocalDateTime> ultimaLeitura   = new AtomicReference<>();
+    private final AtomicReference<LocalDateTime> ultimaSondagem  = new AtomicReference<>();
 
-    /** Reflete se a ultima chamada a {@link #buscarOdds()} serviu o snapshot persistido em vez de consultar o provedor. */
-    private final AtomicBoolean vindoDeSnapshot = new AtomicBoolean(false);
+    /**
+     * Atalho de boot: na primeira execucao apos subir, um snapshot ainda dentro do TTL
+     * dispensa a chamada ao provedor — o cache Caffeine e zerado a cada restart e redeploy,
+     * e redescobrir a mesma resposta custaria credito. Consumido uma unica vez por instancia,
+     * de proposito: depois disso, um miss significa TTL vencido ou cache limpo a mao
+     * ({@code DELETE /api/cache}), e os dois devem chegar ao provedor.
+     */
+    private final AtomicBoolean atalhoDeBootDisponivel = new AtomicBoolean(true);
 
     public OddsClient(@Qualifier("oddsRestClient") RestClient restClient,
                        OddsProperties props,
@@ -75,80 +85,49 @@ public class OddsClient {
         this.objectMapper       = objectMapper;
         this.requestsTotal = meterRegistry.counter("odds_api_requests_total");
         this.errorsTotal   = meterRegistry.counter("odds_api_errors_total");
-        meterRegistry.gauge("odds_api_requests_remaining", requestsRemaining);
+        // NaN, e nao o sentinela, enquanto nao houve leitura: um -1 exportado faria todo
+        // alerta de "saldo < minimo" disparar a cada deploy, antes da primeira chamada.
+        // Comparacao com NaN e falsa no PromQL, entao a serie fica silenciosa ate haver dado.
+        Gauge.builder("odds_api_requests_remaining", this, OddsClient::saldoParaMetrica)
+                .description("Saldo de requisicoes restantes informado pela The Odds API")
+                .register(meterRegistry);
     }
 
     /**
-     * Busca as odds do Brasileirao.
-     * Resultado cacheado por {@code odds.api.cache-ttl-minutos} (padrao 60 min).
+     * Busca as odds do Brasileirao, junto com a origem (ao vivo ou snapshot).
+     * Resultado cacheado por {@code odds.api.cache-ttl-minutos} (padrao 60 min); uma resposta
+     * sem nenhum jogo fica so {@code odds.api.cache-ttl-degradado-minutos} (padrao 10 min).
      *
-     * <p>Antes de chamar o provedor: usa o snapshot persistido sem gastar cota quando ele
-     * ainda esta dentro do TTL do cache (cobre o caso de restart com cache Caffeine vazio),
-     * e para de chamar o provedor quando o guardrail de cota esta ativo. Em qualquer falha do
-     * provedor, tambem recai no snapshot antes de desistir com lista vazia.
+     * <p>{@code sync = true} porque o custo aqui e dinheiro: sem ele, N misses simultaneos
+     * viram N chamadas pagas ao provedor para produzir o mesmo valor.
      */
-    @Cacheable(CacheConfig.CACHE_ODDS)
-    public List<OddsResponse> buscarOdds() {
-        vindoDeSnapshot.set(false);
-
+    @Cacheable(cacheNames = CacheConfig.CACHE_ODDS, sync = true)
+    public OddsComOrigem buscarOdds() {
         if ("SUA_API_KEY_AQUI".equals(props.getKey())) {
             log.warn("Odds API Key nao configurada. Rodando sem filtro de favoritos.");
-            return Collections.emptyList();
+            return OddsComOrigem.indisponivel();
         }
 
         Optional<OddsSnapshot> snapshot = snapshotRepository.findById(OddsSnapshot.ID_UNICO);
+        boolean atalhoDeBoot = atalhoDeBootDisponivel.getAndSet(false);
 
-        if (snapshot.isPresent() && dentroDoTtl(snapshot.get())) {
-            log.debug("Snapshot de odds dentro do TTL ({} min). Evitando chamada ao provedor.",
-                    props.getCacheTtlMinutos());
-            return usarSnapshot(snapshot.get());
+        if (atalhoDeBoot && snapshot.isPresent() && dentroDoTtl(snapshot.get())) {
+            log.info("Primeira busca apos o boot com snapshot de odds dentro do TTL ({} min). "
+                    + "Evitando uma chamada ao provedor.", props.getCacheTtlMinutos());
+            return lerSnapshot(snapshot.get());
         }
 
-        long remanescente = requestsRemaining.get();
-        if (remanescente != SEM_LEITURA && remanescente < props.getMinRequestsRemaining()) {
+        if (guardrailBloqueia()) {
             log.error("Guardrail de cota ativo: saldo restante ({}) abaixo do minimo configurado ({}). "
                             + "Servindo a ultima resposta conhecida sem chamar a The Odds API.",
-                    remanescente, props.getMinRequestsRemaining());
-            return snapshot.map(this::usarSnapshot).orElseGet(() -> {
+                    requestsRemaining.get(), props.getMinRequestsRemaining());
+            return snapshot.map(this::lerSnapshot).orElseGet(() -> {
                 log.error("Guardrail de cota ativo e nenhum snapshot disponivel. Rodando sem filtro de favoritos.");
-                return Collections.emptyList();
+                return OddsComOrigem.indisponivel();
             });
         }
 
-        try {
-            var uri = "/sports/%s/odds".formatted(props.getSport());
-            log.debug("Buscando odds: {}", uri);
-
-            var resposta = restClient.get()
-                    .uri(uriBuilder -> uriBuilder
-                            .path(uri)
-                            .queryParam("regions", props.getRegions())
-                            .queryParam("markets", props.getMarkets())
-                            .queryParam("apiKey", props.getKey())
-                            .build())
-                    .retrieve()
-                    .toEntity(new ParameterizedTypeReference<List<OddsResponse>>() {});
-
-            requestsTotal.increment();
-            registrarCota(resposta.getHeaders());
-
-            List<OddsResponse> odds = resposta.getBody() != null ? resposta.getBody() : Collections.emptyList();
-            log.info("Odds recebidas: {} jogos (cacheado por {} min)", odds.size(), props.getCacheTtlMinutos());
-
-            persistirSnapshot(odds);
-            return odds;
-
-        } catch (RestClientException e) {
-            errorsTotal.increment();
-            log.error("Erro ao buscar odds: {}.", e.getMessage());
-            return snapshot.map(s -> {
-                log.warn("Servindo a ultima resposta conhecida de odds apos falha no provedor.");
-                return usarSnapshot(s);
-            }).orElseGet(() -> {
-                log.error("Sem snapshot disponivel apos falha no provedor. Rodando sem filtro de favoritos.");
-                return Collections.emptyList();
-            });
-        }
+        return consultarProvedor(snapshot);
     }
 
     /** Ultimo saldo de requisicoes restantes lido do provedor, ou {@code null} sem leitura ainda. */
@@ -174,9 +153,85 @@ public class OddsClient {
         return valor != SEM_LEITURA && valor < props.getMinRequestsRemaining();
     }
 
-    /** {@code true} quando a ultima chamada a {@link #buscarOdds()} serviu o snapshot persistido. */
-    public boolean isVindoDeSnapshot() {
-        return vindoDeSnapshot.get();
+    // ── Privado ───────────────────────────────────────────────────────
+
+    private OddsComOrigem consultarProvedor(Optional<OddsSnapshot> snapshot) {
+        try {
+            var uri = "/sports/%s/odds".formatted(props.getSport());
+            log.debug("Buscando odds: {}", uri);
+
+            var resposta = restClient.get()
+                    .uri(uriBuilder -> uriBuilder
+                            .path(uri)
+                            .queryParam("regions", props.getRegions())
+                            .queryParam("markets", props.getMarkets())
+                            .queryParam("apiKey", props.getKey())
+                            .build())
+                    .retrieve()
+                    .toEntity(new ParameterizedTypeReference<List<OddsResponse>>() {});
+
+            requestsTotal.increment();
+            registrarCota(resposta.getHeaders());
+
+            List<OddsResponse> odds = resposta.getBody() != null ? resposta.getBody() : Collections.emptyList();
+            log.info("Odds recebidas: {} jogos (cacheado por {} min)", odds.size(),
+                    odds.isEmpty() ? props.getCacheTtlDegradadoMinutos() : props.getCacheTtlMinutos());
+
+            // Resposta sem jogos nao substitui o snapshot: sobrescrever com uma lista vazia
+            // destruiria o unico fallback que o guardrail tem para servir depois.
+            if (odds.isEmpty()) {
+                log.warn("Provedor respondeu sem nenhum jogo. Mantendo o snapshot anterior como fallback.");
+            } else {
+                persistirSnapshot(odds);
+            }
+            return OddsComOrigem.aoVivo(odds);
+
+        } catch (RestClientException e) {
+            errorsTotal.increment();
+            log.error("Erro ao buscar odds: {}.", e.getMessage());
+            return snapshot.map(s -> {
+                log.warn("Servindo a ultima resposta conhecida de odds apos falha no provedor.");
+                return lerSnapshot(s);
+            }).orElseGet(() -> {
+                log.error("Sem snapshot disponivel apos falha no provedor. Rodando sem filtro de favoritos.");
+                return OddsComOrigem.indisponivel();
+            });
+        }
+    }
+
+    /**
+     * {@code true} quando o guardrail deve barrar a chamada. Com o saldo abaixo do minimo ele
+     * barra, <strong>exceto</strong> quando a ultima noticia da cota ja esta velha o bastante
+     * para valer uma sondagem: o saldo so e reavaliado quando uma chamada acontece, entao sem
+     * essa valvula o guardrail se auto-alimentaria — barra, o saldo nunca atualiza, continua
+     * barrando — e a virada de mes que renova a cota so seria percebida num restart.
+     */
+    private boolean guardrailBloqueia() {
+        if (!isGuardrailAtivo()) return false;
+
+        var referencia = maisRecente(ultimaLeitura.get(), ultimaSondagem.get());
+        boolean sondagemVencida = referencia == null
+                || referencia.plusHours(props.getSondaIntervaloHoras()).isBefore(LocalDateTime.now());
+
+        if (sondagemVencida) {
+            ultimaSondagem.set(LocalDateTime.now());
+            log.warn("Guardrail de cota ativo (saldo {} < {}), mas a ultima leitura tem mais de {}h: "
+                            + "liberando uma chamada de sondagem para reavaliar o saldo.",
+                    requestsRemaining.get(), props.getMinRequestsRemaining(), props.getSondaIntervaloHoras());
+            return false;
+        }
+        return true;
+    }
+
+    private static LocalDateTime maisRecente(LocalDateTime a, LocalDateTime b) {
+        if (a == null) return b;
+        if (b == null) return a;
+        return a.isAfter(b) ? a : b;
+    }
+
+    private static double saldoParaMetrica(OddsClient client) {
+        long valor = client.requestsRemaining.get();
+        return valor == SEM_LEITURA ? Double.NaN : valor;
     }
 
     private void registrarCota(HttpHeaders headers) {
@@ -193,14 +248,21 @@ public class OddsClient {
         ultimaLeitura.set(LocalDateTime.now());
     }
 
+    /**
+     * Avisa ao cruzar o dobro do minimo configurado (aviso cedo) e o proprio minimo (o corte
+     * do guardrail). Os limiares saem da configuracao, e nao de constantes: fixos em 100/50,
+     * um {@code min-requests-remaining=200} acionaria o guardrail sem nenhum aviso previo.
+     * Com o padrao de 50, os limiares continuam sendo 100 e 50.
+     */
     private void avisarSeCruzouLimiar(long anterior, long atual) {
+        long critico = props.getMinRequestsRemaining();
+        long alerta  = critico * 2L;
         boolean semLeituraAnterior = anterior == SEM_LEITURA;
-        if (atual <= LIMIAR_CRITICO && (semLeituraAnterior || anterior > LIMIAR_CRITICO)) {
-            log.warn("Cota da The Odds API cruzou {} requisicoes restantes: saldo atual = {}",
-                    LIMIAR_CRITICO_LOG, atual);
-        } else if (atual <= LIMIAR_ALERTA && (semLeituraAnterior || anterior > LIMIAR_ALERTA)) {
-            log.warn("Cota da The Odds API cruzou {} requisicoes restantes: saldo atual = {}",
-                    LIMIAR_ALERTA_LOG, atual);
+
+        if (atual <= critico && (semLeituraAnterior || anterior > critico)) {
+            log.warn("Cota da The Odds API cruzou {} requisicoes restantes: saldo atual = {}", critico, atual);
+        } else if (atual <= alerta && (semLeituraAnterior || anterior > alerta)) {
+            log.warn("Cota da The Odds API cruzou {} requisicoes restantes: saldo atual = {}", alerta, atual);
         }
     }
 
@@ -227,17 +289,18 @@ public class OddsClient {
         }
     }
 
-    private List<OddsResponse> usarSnapshot(OddsSnapshot snapshot) {
-        vindoDeSnapshot.set(true);
+    private OddsComOrigem lerSnapshot(OddsSnapshot snapshot) {
         try {
             List<OddsResponse> odds = objectMapper.readValue(
                     snapshot.getOddsJson(), new TypeReference<List<OddsResponse>>() {});
             log.info("Servindo {} jogos do snapshot de odds persistido em {}.", odds.size(), snapshot.getCriadoEm());
-            return odds;
+            return OddsComOrigem.deSnapshot(odds);
         } catch (Exception e) {
             log.error("Snapshot de odds persistido esta corrompido: {}. Rodando sem filtro de favoritos.",
                     e.getMessage());
-            return Collections.emptyList();
+            // Degradado, e nao "ao vivo": a resposta continua sendo o que sobrou de uma
+            // tentativa de fallback, e o payload nao deve chamar isso de consulta ao provedor.
+            return OddsComOrigem.deSnapshot(List.of());
         }
     }
 
